@@ -58,6 +58,7 @@ FRONTEND
 	Fixed: Customer's PHP settings must be synchronized when updating PHP permissions of their resellers
 	Fixed: Don't thrown an exception on parse_url error, send a 404 response instead (plugins.php)
 	Fixed: Slow DOM content loading due to some built-in functions override (imscp.js)
+	Fixed: Missing or bad IP check when adding or editing client account (reseller)
 	Fixed: Wrong alternative names in self-signed SSL certificates
 	Fixed: Wrong edit link for domain alias DNS record (external mail DNS record)
 	Removed: Default PHP configuration options - admin level (see errata file)
